# BionicSX2

./: BionicSX2_PCSX2_macOS_Audit.md  CMakeLists.txt  README.md
.github/workflows/: build-ipa.yml
cmake/: FindGameController.cmake  FindUIKit.cmake  ios.toolchain.cmake
ios/: ExportOptions.plist  Info.plist
ios/entitlements/: BionicSX2.entitlements
ios/platform/: AudioStreamStubs.mm  AudioStream_iOS.cpp  AudioStream_iOS.mm  BreakPointStubs.cpp  CocoaTools.mm  Filesystem_iOS.cpp  HWStubs.mm  HostSys_iOS.cpp  HostSys_iOS.mm  Host_iOS.mm  MetalViewController.h  MetalViewController.mm  PCSX2Stubs.mm  PageFaultHandler.cpp  Threading_iOS.cpp  VMManagerStubs.cpp  iOSVMManager.h  iOSVMManager.mm  main.mm
ios/ui/: BionicSX2App.swift  ContentView.swift  GameControllerManager.swift  MetalViewController.swift
metal/: FrameSync.h  FrameSync.mm  MRCHelpers.h  MetalDeviceInfo.h  MetalDeviceInfo.mm  MetalRenderer.h  MetalRenderer.mm  MetalRendererStub.mm  MetalSharedHeader.h  MetalTexture.h  MetalTexture.mm  Shaders.metal
scripts/: build_ios_deps.sh
src/: HwRead.cpp  HwWrite.cpp  Vif_Dynarec.h  Vif_HashBucket.h  pcsx2.vcxproj  pcsx2.vcxproj.filters
src/GS/Renderers/Metal/: GSMetalCPPAccessible.h
src/common/: MRCHelpers.h
src/ps2/Iop/: IopHwRead.cpp  IopHwWrite.cpp
